# unify-metadata

./: README.md  pyproject.toml  setup.py
scripts/: combine_csv_files.py  unify-metadata
src/unify_metadata/: __init__.py  cli.py  dev.ipynb  ena.py  mappings.py  standardise.py  utils.py
unify_metadata/: __init__.py  cli.py  conf.py  ena.py  mappings.py  questions.py  standardise.py  utils.py
