[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "unify_metadata"
authors = [{name = "Jody Phelan", email = "jody.phelan@lshtm.ac.uk"}]
readme = "README.md"
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

[project.scripts]
unify-metadata = "unify_metadata:cli.main"